--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,19 +39,21 @@ db.default.user=postgres
 db.default.password=postgres
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
-# db.default.jndiName=DefaultDS
+db.default.jndiName=DefaultDS
+
+jpa.default=defaultPersistenceUnit
 
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+evolutionplugin=disabled
 
 # Ebean configuration
 # ~~~~~
 # You can declare as many Ebean servers as you want.
 # By convention, the default server is named `default`
 #
-ebean.default="models.*"
+ebean.default="modelos.ebean.*"
 
 # Logger
 # ~~~~~
