--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,10 +33,10 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost:5432/jpatest"
-db.default.user=postgres
-db.default.password=postgres
+db.default.driver=org.h2.Driver
+db.default.url="jdbc:h2:mem:play;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;ALIAS_COLUMN_NAME=TRUE;"
+db.default.user=sa
+db.default.password=""
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
